--- a/src/main/resources/org/example/softfun_funsoft/SingleGroupOrder.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/SingleGroupOrder.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -80,5 +83,45 @@
             <Image url="@../../../pic_resources/McLUX_logo.png" />
          </image>
       </ImageView>
+      <AnchorPane layoutX="377.0" layoutY="119.0" prefHeight="501.0" prefWidth="921.0" style="-fx-background-color: white; -fx-background-radius: 25px;" visible="false">
+         <children>
+            <Label layoutX="119.0" layoutY="27.0" prefHeight="331.0" prefWidth="704.0" text="How many are  &#10;you in a Group?">
+               <font>
+                  <Font name="Eras Bold ITC" size="53.0" />
+               </font>
+            </Label>
+            <JFXTextField editable="false" layoutX="223.0" layoutY="286.0" prefHeight="72.0" prefWidth="149.0" style="-fx-border-color: black;" />
+            <Button layoutX="373.0" layoutY="286.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="77.0" text="+">
+               <font>
+                  <Font size="31.0" />
+               </font>
+            </Button>
+            <Button layoutX="145.0" layoutY="286.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="77.0" text="-">
+               <font>
+                  <Font size="31.0" />
+               </font>
+            </Button>
+            <ImageView fitHeight="199.0" fitWidth="203.0" layoutX="613.0" layoutY="43.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../pic_resources/girl.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="229.0" fitWidth="193.0" layoutX="547.0" layoutY="145.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../pic_resources/girl%20(1).png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="212.0" fitWidth="193.0" layoutX="692.0" layoutY="135.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../pic_resources/boy(1).png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="193.0" fitWidth="259.0" layoutX="627.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../pic_resources/single-icon.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
     </children>
 </AnchorPane>
