--- a/src/main/resources/org/example/softfun_funsoft/CartItem.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/CartItem.fxml
@@ -1,6 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="534.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" />
+<AnchorPane prefHeight="189.0" prefWidth="870.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.CartItemController">
+   <children>
+      <ImageView fx:id="img" fitHeight="150.0" fitWidth="200.0" layoutX="14.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../pic_resources/Big_Burger.jpg" />
+         </image>
+      </ImageView>
+      <Label fx:id="itemName" layoutX="188.0" layoutY="54.0" prefHeight="81.0" prefWidth="260.0" text="Burger Yummy" wrapText="true">
+         <font>
+            <Font name="Gill Sans MT" size="30.0" />
+         </font>
+      </Label>
+      <Label fx:id="itemQuantity" layoutX="419.0" layoutY="62.0" prefHeight="68.0" prefWidth="43.0" text="x1" wrapText="true">
+         <font>
+            <Font name="Gill Sans MT" size="30.0" />
+         </font>
+      </Label>
+      <Label fx:id="itemPrice" layoutX="473.0" layoutY="62.0" prefHeight="68.0" prefWidth="137.0" text="PHP 100" wrapText="true">
+         <font>
+            <Font name="Gill Sans MT" size="30.0" />
+         </font>
+      </Label>
+      <Button fx:id="removeBTN" layoutX="769.0" layoutY="83.0" mnemonicParsing="false" text="Remove" textFill="RED" />
+      <Label fx:id="totalPrice" layoutX="610.0" layoutY="60.0" prefHeight="68.0" prefWidth="137.0" text="PHP 100" wrapText="true">
+         <font>
+            <Font name="Gill Sans MT" size="30.0" />
+         </font>
+      </Label>
+   </children>
+</AnchorPane>
