--- a/src/main/resources/org/example/softfun_funsoft/MainMenu.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/MainMenu.fxml
@@ -134,13 +134,22 @@
             <JFXButton fx:id="proceedToCheckout" layoutX="3.0" layoutY="2.0" onAction="#setAddToCart" prefHeight="52.0" prefWidth="389.0" text="." />
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="cartPane" layoutX="872.0" layoutY="216.0" prefHeight="476.0" prefWidth="653.0" visible="false">
+      <AnchorPane fx:id="cartPane" layoutY="103.0" prefHeight="589.0" prefWidth="1549.0" style="-fx-background-color: pink;" visible="false">
          <children>
-            <Label layoutX="262.0" layoutY="14.0" text="Order List">
+            <Label layoutX="709.0" layoutY="23.0" text="Order List">
                <font>
                   <Font name="Gill Sans MT" size="30.0" />
                </font>
             </Label>
+            <ScrollPane fx:id="cartScrollPane" hbarPolicy="NEVER" layoutX="49.0" layoutY="68.0" prefHeight="472.0" prefWidth="747.0" vbarPolicy="NEVER">
+               <content>
+                  <GridPane fx:id="cartGrid" prefHeight="3.0" prefWidth="48.0">
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                  </GridPane>
+               </content>
+            </ScrollPane>
          </children>
       </AnchorPane>
       <!--      <JFXButton buttonType="RAISED" layoutX="1375.0" layoutY="693.0" text="View Order List" underline="true">-->
