--- a/src/main/resources/org/example/softfun_funsoft/SingleGroupOrder.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/SingleGroupOrder.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -56,7 +56,7 @@
             <Image url="@../../../pic_resources/single-icon.png" />
          </image>
       </ImageView>
-      <JFXButton layoutX="531.0" layoutY="699.0" opacity="0.8" prefHeight="52.0" prefWidth="166.0" text="Cebuano" textFill="#fcfcfc">
+      <JFXButton layoutX="531.0" layoutY="699.0" prefHeight="52.0" prefWidth="166.0" text="Cebuano" textFill="#fcfcfc">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
@@ -66,12 +66,12 @@
             <Font name="Eras Medium ITC" size="19.0" />
          </font>
       </Text>
-      <JFXButton layoutX="695.0" layoutY="698.0" opacity="0.8" prefHeight="52.0" prefWidth="166.0" text="Tagalog" textFill="#fcfcfc">
+      <JFXButton layoutX="695.0" layoutY="698.0" prefHeight="52.0" prefWidth="166.0" text="Tagalog" textFill="#fcfcfc">
          <font>
             <Font name="Eras Demi ITC" size="24.0" />
          </font>
       </JFXButton>
-      <JFXButton layoutX="850.0" layoutY="699.0" opacity="0.8" prefHeight="52.0" prefWidth="166.0" text="English" textFill="#fcfcfc">
+      <JFXButton layoutX="850.0" layoutY="699.0" prefHeight="52.0" prefWidth="166.0" text="English" textFill="#fcfcfc">
          <font>
             <Font name="Eras Demi ITC" size="24.0" />
          </font>
@@ -90,37 +90,29 @@
                   <Font name="Eras Bold ITC" size="53.0" />
                </font>
             </Label>
-            <JFXTextField editable="false" layoutX="223.0" layoutY="286.0" prefHeight="72.0" prefWidth="149.0" style="-fx-border-color: black;" />
-            <Button layoutX="373.0" layoutY="286.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="77.0" text="+">
-               <font>
-                  <Font size="31.0" />
-               </font>
-            </Button>
-            <Button layoutX="145.0" layoutY="286.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="77.0" text="-">
-               <font>
-                  <Font size="31.0" />
-               </font>
-            </Button>
-            <ImageView fitHeight="199.0" fitWidth="203.0" layoutX="613.0" layoutY="43.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="199.0" fitWidth="203.0" layoutX="613.0" layoutY="68.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../pic_resources/girl.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="229.0" fitWidth="193.0" layoutX="547.0" layoutY="145.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="229.0" fitWidth="193.0" layoutX="547.0" layoutY="170.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../pic_resources/girl%20(1).png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="212.0" fitWidth="193.0" layoutX="692.0" layoutY="135.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="212.0" fitWidth="193.0" layoutX="692.0" layoutY="160.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../pic_resources/boy(1).png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="193.0" fitWidth="259.0" layoutX="627.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="193.0" fitWidth="259.0" layoutX="627.0" layoutY="235.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../pic_resources/single-icon.png" />
                </image>
             </ImageView>
+            <TextField fx:id="quantity" alignment="CENTER" editable="false" layoutX="262.0" layoutY="313.0" prefHeight="48.0" prefWidth="139.0" text="1" />
+            <Button fx:id="subtractQuantity" layoutX="226.0" layoutY="313.0" mnemonicParsing="false" onAction="#setSubtractQuantity" prefHeight="48.0" prefWidth="44.0" text="-" />
+            <Button fx:id="addQuantity" layoutX="385.0" layoutY="313.0" mnemonicParsing="false" onAction="#setAddQuantity" prefHeight="48.0" prefWidth="44.0" text="+" />
          </children>
       </AnchorPane>
     </children>
