--- a/src/main/resources/org/example/softfun_funsoft/ScanHere.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/ScanHere.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1541.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.StartUpCont">
+<AnchorPane prefHeight="800.0" prefWidth="1533.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.StartUpCont">
     <children>
         <Rectangle fill="#db1f2a" height="800.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1541.0" />
         <Text fill="WHITE" layoutX="598.0" layoutY="183.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Scan here to Pay!" wrappingWidth="419.116455078125">
@@ -16,7 +16,7 @@
                 <Font name="Gill Sans MT Bold" size="40.0" />
             </font>
         </Text>
-        <ImageView fitHeight="620.0" fitWidth="608.0" layoutX="-172.0" layoutY="78.0" opacity="0.75" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="620.0" fitWidth="608.0" layoutX="-147.0" layoutY="133.0" opacity="0.75" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../../../pic_resources/McLUX_logo.png" />
             </image>
@@ -32,5 +32,20 @@
             <Font name="Gill Sans MT" size="34.0" />
          </font>
       </JFXButton>
+      <ImageView fitHeight="436.0" fitWidth="282.0" layoutX="1216.0" layoutY="120.0" pickOnBounds="true" preserveRatio="true" rotate="340.0">
+         <image>
+            <Image url="@../../../pic_resources/Big_tasty_with_Bacon-removebg-preview.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="268.0" fitWidth="200.0" layoutX="1333.0" layoutY="599.0" pickOnBounds="true" preserveRatio="true" rotate="370.0">
+         <image>
+            <Image url="@../../../pic_resources/Coca-Cola-removebg-preview.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="304.0" fitWidth="349.0" layoutX="1292.0" layoutY="-48.0" pickOnBounds="true" preserveRatio="true" rotate="383.0">
+         <image>
+            <Image url="@../../../pic_resources/friess.png" />
+         </image>
+      </ImageView>
     </children>
 </AnchorPane>
