--- a/src/main/resources/org/example/softfun_funsoft/DineInOrTakeout.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/DineInOrTakeout.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1541.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.StartUpCont">
+<AnchorPane prefHeight="800.0" prefWidth="1541.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.DineInOrTakeOutController">
    <children>
       <Rectangle fill="#db1f2a" height="800.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1541.0" />
       <Text fill="WHITE" layoutX="591.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dine in Or Take out">
@@ -28,19 +28,19 @@
             <Font name="Eras Bold ITC" size="44.0" />
          </font>
       </Text>
-      <JFXButton layoutX="383.0" layoutY="126.0" prefHeight="438.0" prefWidth="344.0" text="." />
-      <JFXButton layoutX="805.0" layoutY="126.0" prefHeight="441.0" prefWidth="345.0" text="." />
+      <JFXButton fx:id="dineIn" layoutX="383.0" layoutY="126.0" onAction="#dineIn" prefHeight="438.0" prefWidth="344.0" text="." />
+      <JFXButton fx:id="takeOut" layoutX="805.0" layoutY="126.0" onAction="#takeOut" prefHeight="441.0" prefWidth="345.0" text="." />
       <ImageView fitHeight="620.0" fitWidth="608.0" layoutX="-239.0" layoutY="78.0" opacity="0.75" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../pic_resources/McLUX_logo.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="243.0" fitWidth="251.0" layoutX="435.0" layoutY="228.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="243.0" fitWidth="251.0" layoutX="435.0" layoutY="228.0" onMouseClicked="#dineIn" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../pic_resources/dinner.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="236.0" fitWidth="283.0" layoutX="857.0" layoutY="234.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="236.0" fitWidth="283.0" layoutX="857.0" layoutY="234.0" onMouseClicked="#takeOut" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../pic_resources/food-package.png" />
          </image>
