--- a/src/main/resources/org/example/softfun_funsoft/PaymentTypes.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/PaymentTypes.fxml
@@ -9,37 +9,42 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="788.0" prefWidth="1542.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.PaymentController">
+<AnchorPane prefHeight="788.0" prefWidth="1542.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.PaymentController">
     <children>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="MAROON" height="788.0" layoutX="-1.0" stroke="BLACK" strokeType="INSIDE" width="1542.0" />
-        <Label layoutX="530.0" layoutY="133.0" text="How would you like to pay?" textFill="WHITE">
+        <Rectangle fill="RED" height="788.0" layoutX="-1.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1545.0" />
+        <Label layoutX="489.0" layoutY="131.0" text="How would you like to pay?" textFill="WHITE">
             <font>
-                <Font name="System Bold" size="30.0" />
+                <Font name="Eras Bold ITC" size="40.0" />
             </font>
         </Label>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#eeeeee" height="350.0" layoutX="420.0" layoutY="209.0" stroke="BLACK" strokeType="INSIDE" width="300.0" />
-        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="350.0" layoutX="767.0" layoutY="208.0" stroke="BLACK" strokeType="INSIDE" width="300.0" />
-      <ImageView fitHeight="310.0" fitWidth="263.0" layoutX="439.0" layoutY="231.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="309.0" fitWidth="258.0" layoutX="787.0" layoutY="229.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="303.0" fitWidth="253.0" layoutX="446.0" layoutY="234.0" onMouseClicked="#cardPayment" pickOnBounds="true" preserveRatio="true">
+        <Rectangle arcHeight="25.0" arcWidth="25.0" fill="#eeeeee" height="350.0" layoutX="440.0" layoutY="249.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="300.0" />
+        <Rectangle arcHeight="25.0" arcWidth="25.0" fill="WHITE" height="350.0" layoutX="787.0" layoutY="248.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="300.0" />
+      <ImageView fitHeight="310.0" fitWidth="263.0" layoutX="459.0" layoutY="271.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fitHeight="309.0" fitWidth="258.0" layoutX="807.0" layoutY="269.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fitHeight="303.0" fitWidth="253.0" layoutX="466.0" layoutY="274.0" onMouseClicked="#cardPayment" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../pic_resources/atm-card.png" />
          </image></ImageView>
-      <ImageView fitHeight="303.0" fitWidth="253.0" layoutX="793.0" layoutY="232.0" onMouseClicked="#cashPayment" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="303.0" fitWidth="253.0" layoutX="813.0" layoutY="272.0" onMouseClicked="#cashPayment" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../pic_resources/money.png" />
          </image></ImageView>
-      <Text fill="WHITE" layoutX="518.0" layoutY="621.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Card">
+      <Text fill="WHITE" layoutX="538.0" layoutY="661.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Card">
          <font>
             <Font name="Eras Bold ITC" size="44.0" />
          </font>
       </Text>
-      <Text fill="WHITE" layoutX="863.0" layoutY="621.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cash">
+      <Text fill="WHITE" layoutX="883.0" layoutY="661.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cash">
          <font>
             <Font name="Eras Bold ITC" size="44.0" />
          </font>
       </Text>
-      <JFXButton fx:id="cashBTN" layoutX="416.0" layoutY="211.0" onAction="#cardPayment" prefHeight="350.0" prefWidth="310.0" text="." />
-      <JFXButton layoutX="757.0" layoutY="208.0" onAction="#cashPayment" prefHeight="350.0" prefWidth="310.0" text="." />
+      <JFXButton fx:id="cashBTN" layoutX="436.0" layoutY="251.0" onAction="#cardPayment" prefHeight="350.0" prefWidth="310.0" text="." />
+      <JFXButton layoutX="777.0" layoutY="248.0" onAction="#cashPayment" prefHeight="350.0" prefWidth="310.0" text="." />
+      <Text fill="YELLOW" layoutX="744.0" layoutY="662.0" strokeType="OUTSIDE" strokeWidth="0.0" text="or">
+         <font>
+            <Font name="Eras Light ITC" size="44.0" />
+         </font>
+      </Text>
     </children>
 </AnchorPane>
